--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,13 +9,14 @@ jobs:
 
   test:
     name: kt Test
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.platform }}
+
     steps:
 
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.15
+        go-version: ${{ matrix.go }}
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
@@ -33,3 +34,12 @@ jobs:
 
     - name: Test
       run: make test
+
+    strategy:
+      matrix:
+        go:
+          - 1.15
+          - 1.16
+          - 1.17
+        platform:
+          - ubuntu-latest
